# django_mcp

./: .gitignore  README.md  google.py  pyproject.toml  pytest.ini
django_mcp/: main.py  utils.py
django_mcp/resources/: library.json
django_mcp/resources/asyncio/: coroutines_tasks.md  examples.md  exceptons.md  references.md  runners.md
django_mcp/resources/models/: introduction.md  queries.md
tests/: test_utils.py
