[project]
name = "django-mcp"
version = "0.1.0"
description = "An MCP server implementation for applications that use Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "redis>=7.1.0",
]
authors = [
    { name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
maintainers = [
    { name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
]
